<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainback">

    <EditText
        android:id="@+id/registerEmail_ID"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="230dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/emailicon"
        android:ems="10"
        android:hint="@string/EmailTextField"
        android:inputType="textEmailAddress"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/regieterName_ID"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/registerEmail_ID"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="10dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/nameicon"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textSize="18sp">

    </EditText>

    <EditText
        android:id="@+id/registerPassword_ID"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/regieterName_ID"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="10dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/passwordicon"
        android:ems="10"
        android:hint="@string/PasswordTextField"
        android:inputType="textPassword"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/registerConfirmPassword_ID"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/registerPassword_ID"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="10dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/passwordicon"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="197dp"
        android:contentDescription="@string/app_name"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="462dp"
        app:srcCompat="@drawable/dollar" />

    <Button
        android:id="@+id/registeringButton_ID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="103dp"
        android:layout_marginLeft="75dp"
        android:text="@string/register"
        android:textSize="18sp" />

</RelativeLayout>